--- a/Arc/style.css
+++ b/Arc/style.css
@@ -264,13 +264,13 @@ html {
 }
 
 .home_topic_text {
-    padding-top: 25%;
+    padding-top: 7.760416666666667vw;
     padding-bottom: 2.5520833333333335vw;
     margin: 0;
 }
 
 .home_topic_text2 {
-    padding-bottom: 36px;
+    padding-bottom: 1.875vw;
     margin: 0;
 }
 
