--- a/Arc/style.css
+++ b/Arc/style.css
@@ -2,11 +2,11 @@
     --logo_size: 125px;
     --button_size_x: 217px;
     --button_size_y: 54px;
-    --mood_tone_1: #f5f4f5;
-    --mood_tone_2: #fbd8b8;
-    --mood_tone_3: #5382bf;
-    --mood_tone_4: #f0a28e;
-    --mood_tone_5: #e84225;
+    --mood_tone_1: #f2f2f2;
+    --mood_tone_2: #f6d8bc;
+    --mood_tone_3: #5a7fbb;
+    --mood_tone_4: #ed6c4b;
+    --mood_tone_5: #d74e34;
     --button_color: #b7a9a6;
     --topic_or_button_font: 'Prompt', sans-serif;
     --text_font: 'Bai Jamjuree', sans-serif;
