--- a/Arc/style.css
+++ b/Arc/style.css
@@ -574,7 +574,7 @@ html {
 }
 
 .contact_info a:hover {
-    color: var(--button_color);
+    color: var(--mood_tone_4);
     text-decoration: none;
 }
 
