--- a/Arc/style.css
+++ b/Arc/style.css
@@ -73,17 +73,17 @@ html {
 
 #Btn_top {
     position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
+    bottom: 1.0416666666666667vw;
+    right: 1.5625vw;
     font-size: 18px;
+    font-family: var(--text_font);
     border: none;
     outline: none;
     background-color: var(--mood_tone_5);
     color: white;
     cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
+    padding: 0.78125vw;
+    border-radius: 0.20833333333333334vw;
     z-index: 9999;
 }
 
