--- a/Arc/style.css
+++ b/Arc/style.css
@@ -609,3 +609,94 @@ html {
 
 
 /* ปุ่มด้านล่าง*/
+
+/* เมล็ด */
+
+/*กฎหมายการเลือกตั้ง*/
+.flower_5{
+
+}
+.gif_5{
+
+}
+.seed_5{
+
+}
+/*กฎหมายการเลือกตั้ง*/
+
+
+
+/*กฎหมายลาคลอด*/
+.flower_6{
+
+}
+.gif_6{
+
+}
+.seed_6{
+
+}
+/*กฎหมายลาคลอด*/
+
+
+
+/*ร่าง*/
+
+.flower_0{
+
+}
+.gif_0{
+
+}
+.seed_0{
+
+}
+
+/*--------------------------------------------*/
+.flower_1{
+
+}
+.gif_1{
+
+}
+.seed_1{
+
+}
+
+
+/*---------------------------------------------*/
+.flower_2{
+
+}
+.gif_2{
+
+}
+.seed_2{
+
+}
+
+/*---------------------------------------------*/
+.flower_3{
+
+}
+.gif_3{
+
+}
+.seed_3{
+
+}
+
+/*---------------------------------------------*/
+.flower_4{
+
+}
+.gif_4{
+
+}
+.seed_4{
+
+}
+/*ร่าง*/
+
+
+/* เมล็ด */
