--- a/Arc/style.css
+++ b/Arc/style.css
@@ -408,8 +408,8 @@ html {
 .vdo4 {
     margin-left: 0vw;
     top: 16.73060029282576vw;
-    width: 883px;
-    height: 747px;
+    width: 45.989583333333336vw;
+    height: 38.90625vw;
 }
 
 .vdo5 {
