--- a/Arc/style.css
+++ b/Arc/style.css
@@ -399,8 +399,8 @@ html {
 }
 
 .vdo3 {
-    left: 15.104166666666666vw;
-    top: 14.9vw;
+    left: 14.9vw;
+    top: 15.53125vw;
     width: 53.385416666666664vw;
     height: 39.114583333333336vw;
 }
@@ -501,6 +501,7 @@ html {
 
 .contact_container {
     padding-top: 3.4895833333333326vw !important;
+    margin-left: 16vw !important;
     /* margin-left: 338px !important;
     margin-right: 338px !important;
     padding-left: 0 !important;
@@ -608,85 +609,95 @@ html {
 }
 
 
-/* อิอิอิปุ่มด้านล่าง*/
-
-
+/* ปุ่มด้านล่าง*/
 
 
 /* เมล็ด */
 
+
 /*กฎหมายการเลือกตั้ง*/
-.flower_5{
+
+.flower_5 {
     margin-top: -15vw;
     width: 3vw;
     height: 3vw;
 }
-.gif_5{
+
+.gif_5 {
     margin-top: -18vw;
     height: 18vw;
     width: 15vw;
-
 }
-.seed_5{
+
+.seed_5 {
     margin-top: -15vw;
     height: 3vw;
     width: 3vw;
-
 }
+
+
 /*กฎหมายการเลือกตั้ง*/
 
 
-
 /*กฎหมายลาคลอด*/
-.flower_6{
+
+.flower_6 {
     margin-top: -15vw;
     height: 2vw;
     width: 2vw;
 }
-.gif_6{
+
+.gif_6 {
     margin-top: -15vw;
     height: 10vw;
     width: 12vw;
 }
-.seed_6{
+
+.seed_6 {
     margin-top: -15vw;
     height: 2vw;
     width: 2vw;
     margin-bottom: 2vw;
 }
+
+
 /*กฎหมายลาคลอด*/
 
 
-
 /*ร่าง*/
 
-.flower_0{
+.flower_0 {
     height: 3vw;
     width: 3vw;
 }
-.gif_0{
+
+.gif_0 {
     height: 10vw;
     width: 12vw;
     margin-top: -9vw;
 }
-.seed_0{
+
+.seed_0 {
     height: 3vw;
     width: 3vw;
     margin-top: -8vw;
-
 }
+
 
 /*--------------------------------------------*/
-.flower_1{
+
+.flower_1 {
     height: 3vw;
     width: 3vw;
 }
-.gif_1{
+
+.gif_1 {
     height: 10vw;
     width: 12vw;
     margin-top: -9vw;
 }
-.seed_1{
+
+.seed_1 {
     height: 3vw;
     width: 3vw;
     margin-top: -8vw;
@@ -694,97 +705,127 @@ html {
 
 
 /*---------------------------------------------*/
-.flower_2{
+
+.flower_2 {
     height: 3vw;
     width: 3vw;
-
 }
-.gif_2{
+
+.gif_2 {
     height: 10vw;
     width: 12vw;
     margin-top: -9vw;
 }
-.seed_2{
+
+.seed_2 {
     height: 3vw;
     width: 3vw;
     margin-top: -8vw;
 }
 
+
 /*---------------------------------------------*/
-.flower_3{
+
+.flower_3 {
     height: 3vw;
     width: 3vw;
     margin-top: -14vw;
 }
-.gif_3{
+
+.gif_3 {
     height: 10vw;
     width: 12vw;
     margin-top: -24vw;
 }
-.seed_3{
+
+.seed_3 {
     height: 3vw;
     width: 3vw;
     margin-top: -24vw;
 }
 
+
 /*---------------------------------------------*/
-.flower_4{
+
+.flower_4 {
     height: 3vw;
     width: 3vw;
     margin-top: -14vw;
 }
-.gif_4{
+
+.gif_4 {
     height: 10vw;
     width: 12vw;
     margin-top: -24vw;
 }
-.seed_4{
+
+.seed_4 {
     height: 3vw;
     width: 3vw;
     margin-top: -24vw;
 }
+
+
 /*ร่าง*/
+
+
 /*text_seed*/
-.text_seed{
+
+.text_seed {
     margin-top: -2vw;
 }
-.text_seed_1{
+
+.text_seed_1 {
     margin-top: -8vw;
 }
-.text_seed_2{
+
+.text_seed_2 {
     margin-top: -2vw;
 }
+
+
 /*รูปดอก*/
-.img_fow{
+
+.img_fow {
     margin-top: -10.5vw;
     margin-left: 3vw;
 }
-.text_fow_00{
+
+.text_fow_00 {
     margin-top: 1vw;
 }
-.img_fow_1{
+
+.img_fow_1 {
     margin-top: -8.5vw;
 }
-.text_fow_01{
+
+.text_fow_01 {
     margin-top: 1vw;
 }
-.img_fow_2{
+
+.img_fow_2 {
     margin-top: -9vw;
 }
-.img_fow_3{
+
+.img_fow_3 {
     margin-top: -20vw;
 }
-.img_fow_4{
+
+.img_fow_4 {
     margin-top: -21.5vw;
 }
-.text_fow{
+
+.text_fow {
     margin-top: -0.5vw;
 }
-.text_fow_1{
+
+.text_fow_1 {
     margin-top: 0.2vw;
 }
-.text_fow_2{
+
+.text_fow_2 {
     margin-top: 0.3vw;
 }
+
 
 /* เมล็ด */
